<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BkGrd"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.richard.popularmoviesstg1.DetailActivity"
    tools:shownIn="@layout/activity_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/starbkgrd">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/fav_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/fav_button"
                    android:layout_toRightOf="@id/fav_button"
                    android:padding="@dimen/movTitle_padding"
                    android:text="@string/rating"
                    android:textAlignment="center"
                    android:textColor="@color/Label_Color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/releaseLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@id/release"
                    android:layout_toStartOf="@+id/release"
                    android:padding="@dimen/movTitle_padding"
                    android:text="@string/Release_label"
                    android:textColor="@color/Label_Color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:padding="@dimen/movTitle_padding"
                    android:text="@string/release"
                    android:textAlignment="center"
                    android:textColor="@color/BkGrd"
                    android:textSize="12sp" />
            </RelativeLayout>


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/paddingLayout"
                android:text="@string/movieName"
                android:textAlignment="center"
                android:textColor="@color/BkGrd"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plotLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/movTitle_padding"
                android:text="@string/Plot_label"
                android:textAlignment="center"
                android:textColor="@color/Label_Color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/movTitle_padding"
                android:text="@string/moviePlot"
                android:textAlignment="center"
                android:textColor="@color/BkGrd"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/starbkgrd"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Review_label"
                android:textColor="@color/Label_Color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="5dp"
                android:scrollbars="vertical" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>